--- a/PlanerSimulation_ProcessInteraction/Views/DebugView.xaml
+++ b/PlanerSimulation_ProcessInteraction/Views/DebugView.xaml
@@ -31,8 +31,8 @@
                         <TextBox Text = "{Binding DisplayPoint, UpdateSourceTrigger=PropertyChanged}"  Width="80" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                        <Label Content="Average Depth:" Width="110"/>
-                        <TextBox Text = "{Binding AvrDepth, UpdateSourceTrigger=PropertyChanged}"  Width="80" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        <Label Content="Current Depth:" Width="110"/>
+                        <TextBox Text = "{Binding CurrentDepth, UpdateSourceTrigger=PropertyChanged}"  Width="80" HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Margin="10" VerticalAlignment="Center">
